--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -70,10 +70,19 @@
                         android:textColor="@color/statment_layout_title_h_line"
                         android:text="￥768678.03"/>
                </RelativeLayout>
-               <ImageView
+               <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
-                   android:layout_weight="1"/>
+                   android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/data_charge_img1"
+                        android:background="#00ff00"
+                        android:layout_marginLeft="5dp"
+                        android:layout_gravity="center"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp" />
+               </LinearLayout>
+
           </LinearLayout>
      </LinearLayout>
      <View
@@ -141,10 +150,18 @@
                         android:textColor="@color/statment_layout_title_h_line"
                         android:text="￥768678.03"/>
                </RelativeLayout>
-               <ImageView
+               <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
-                   android:layout_weight="1"/>
+                   android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/data_charge_img2"
+                        android:background="#00ff00"
+                        android:layout_marginLeft="5dp"
+                        android:layout_gravity="center"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp" />
+               </LinearLayout>
           </LinearLayout>
      </LinearLayout>
      <View
@@ -212,10 +229,18 @@
                         android:textColor="@color/statment_layout_title_h_line"
                         android:text="￥768678.03"/>
                </RelativeLayout>
-               <ImageView
+               <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
-                   android:layout_weight="1"/>
+                   android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/data_charge_img3"
+                        android:background="#00ff00"
+                        android:layout_marginLeft="5dp"
+                        android:layout_gravity="center"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp" />
+               </LinearLayout>
           </LinearLayout>
      </LinearLayout>
      <View
@@ -283,10 +308,18 @@
                         android:textColor="@color/statment_layout_title_h_line"
                         android:text="￥768678.03"/>
                </RelativeLayout>
-               <ImageView
+               <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
-                   android:layout_weight="1"/>
+                   android:layout_weight="1">
+                    <ImageView
+                        android:id="@+id/data_charge_img4"
+                        android:background="#00ff00"
+                        android:layout_marginLeft="5dp"
+                        android:layout_gravity="center"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp" />
+               </LinearLayout>
           </LinearLayout>
      </LinearLayout>
      <View
