--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-    <com.hjm.bottomtabbar.BottomTabBar
-        android:id="@+id/main_bottom_tab_bar"
+    >
+    <FrameLayout
+        android:id="@+id/main_fl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/main_rg"
+       >
+    </FrameLayout>
+    <RadioGroup
+        android:layout_alignParentBottom="true"
+        android:id="@+id/main_rg"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingTop="5dp"
+        android:orientation="horizontal"
+        >
+        <RadioButton
+            android:id="@+id/main_bt1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@null"
+            android:drawableTop="@drawable/mian_imgone"
+            android:textColor="@drawable/main_text"
+            android:text="运维"
+            />
+        <RadioButton
+            android:id="@+id/main_bt2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@null"
+            android:drawableTop="@drawable/mian_imgtwo"
+            android:textColor="@drawable/main_text"
+            android:text="能效"
+            />
+        <RadioButton
+            android:id="@+id/main_bt3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@null"
+            android:drawableTop="@drawable/mian_imgthree"
+            android:textColor="@drawable/main_text"
+            android:text="数据"
+            />
+        <RadioButton
+            android:id="@+id/main_bt4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:button="@null"
+            android:drawableTop="@drawable/mian_imgfour"
+            android:textColor="@drawable/main_text"
+            android:text="我的"
+            />
+    </RadioGroup>
+
+</RelativeLayout>
 
