--- a/app/src/main/res/layout/fragment_identity.xml
+++ b/app/src/main/res/layout/fragment_identity.xml
@@ -6,24 +6,26 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/identity_toolbar"
+        style="@style/toolbar"
+        android:background="@color/orangered"
+        app:layout_scrollFlags="scroll|enterAlways">
+        <ImageView
+            android:src="@mipmap/ic_logo"
+            style="@style/toolbar_center"/>
+    </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:gravity="center"
         android:background="@color/orangered"
         android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/identity_toolbar"
-            style="@style/toolbar"
-            android:background="@color/orangered"
-            app:layout_scrollFlags="scroll|enterAlways">
-            <ImageView
-                android:src="@mipmap/ic_logo"
-                style="@style/toolbar_center"/>
-        </android.support.v7.widget.Toolbar>
+
         <LinearLayout
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -82,12 +84,13 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <ImageView
+                        android:id="@+id/identity_img"
                         android:src="@mipmap/identity_electricity"
                         android:layout_marginTop="20dp"
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="客户名称"/>
+                      />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,6 +112,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <TextView
+                            android:id="@+id/identity_switch_electricity"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -130,14 +134,10 @@
 
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
         <LinearLayout
             android:id="@+id/layout_password"
-            style="@style/identity_layout">
+            android:layout_weight="1"
+            style="@style/identity_layout_item">
 
             <ImageView
                 style="@style/identity_imageview"
@@ -163,7 +163,8 @@
             style="@style/cut_off_line_1dp"/>
         <LinearLayout
             android:id="@+id/layout_version"
-            style="@style/identity_layout">
+            android:layout_weight="1"
+            style="@style/identity_layout_item">
 
             <ImageView
                 style="@style/identity_imageview"
@@ -189,7 +190,8 @@
 
         <LinearLayout
             android:id="@+id/identity_about"
-            style="@style/identity_layout">
+            android:layout_weight="1"
+            style="@style/identity_layout_item">
 
             <ImageView
                 style="@style/identity_imageview"
@@ -215,7 +217,8 @@
 
         <LinearLayout
             android:id="@+id/layout_loginout"
-            style="@style/identity_layout">
+            android:layout_weight="1"
+            style="@style/identity_layout_item">
 
             <ImageView
                 style="@style/identity_imageview"
@@ -233,7 +236,6 @@
                 android:src="@mipmap/head_right"
                 />
         </LinearLayout>
-    </LinearLayout>
 
 
 </LinearLayout>
