--- a/app/src/main/res/values/energy_styles.xml
+++ b/app/src/main/res/values/energy_styles.xml
@@ -119,6 +119,14 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/selector_layout</item>
     </style>
+    <style name="identity_layout_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:paddingLeft">24dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@drawable/selector_layout</item>
+    </style>
     <style name="identity_textview">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
