--- a/app/src/main/res/layout/activity_ops_item_right_no.xml
+++ b/app/src/main/res/layout/activity_ops_item_right_no.xml
@@ -17,11 +17,16 @@
           android:layout_height="wrap_content"
           />
         <TextView
+            android:id="@+id/ops_item_right_no_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:text="全部设备运转良好，请继续保持！"
             />
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:background="@color/border"
+        />
 </LinearLayout>
