--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -32,13 +32,14 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3">
                 <TextView
-                    android:id="@+id/tv2"
+                    android:id="@+id/ques_index_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="5dp"
                     android:text="配电房问题"/>
                 <TextView
-                    android:layout_below="@+id/tv2"
+                    android:id="@+id/ques_index"
+                    android:layout_below="@+id/ques_index_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -51,6 +52,7 @@
                 android:layout_weight="3">
             </RelativeLayout>
             <TextView
+                android:id="@+id/ques_rank"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:layout_height="wrap_content"
@@ -75,6 +77,7 @@
             android:layout_marginLeft="24dp"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/ques_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -94,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:textSize="18sp"
-                    android:text="420V"/>\
+                    android:text="420V"/>
                 <TextView
                     android:layout_marginLeft="10dp"
                     style="@style/questions_text_style"
@@ -122,14 +125,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/ques_createtime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2018/03/05"/>
-                <TextView
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="18:20"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -141,6 +140,7 @@
                     android:layout_height="wrap_content"
                    />
                 <TextView
+                    android:id="@+id/ques_address"
                     android:layout_marginLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
