--- a/app/src/main/res/layout/fragment_questions_progress_item.xml
+++ b/app/src/main/res/layout/fragment_questions_progress_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/progress_title"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,6 +22,7 @@
             android:textColor="@color/black"
             android:text="发现问题"/>
         <TextView
+            android:id="@+id/progress_time"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
