--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:cube_ptr="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tties.cn.energy.view.activity.DataActivity">
+    cube_ptr:context="tties.cn.energy.view.activity.DataActivity">
     <include
         layout="@layout/toobar"/>
     <LinearLayout
@@ -76,13 +76,28 @@
             android:layout_marginRight="24dp"
             android:layout_marginLeft="24dp"
             android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/ques_title"
+            <FrameLayout
+                android:id="@+id/ptrlayout_question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="18sp"
-                android:text="显示异常报警，正常开启亮度不适，显示文字不清晰，时钟不正确，操作不灵活，屏幕屏保不正常"/>
+                cube_ptr:ptr_duration_to_close="200"
+                cube_ptr:ptr_duration_to_close_header="1000"
+                cube_ptr:ptr_keep_header_when_refresh="true"
+                cube_ptr:ptr_pull_to_fresh="false"
+                cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+                cube_ptr:ptr_resistance="1.7">
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/list_question_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/ques_title"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:textSize="18sp"-->
+                <!--android:text="显示异常报警，正常开启亮度不适，显示文字不清晰，时钟不正确，操作不灵活，屏幕屏保不正常"/>-->
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
