--- a/app/src/main/res/layout/fragment_ops.xml
+++ b/app/src/main/res/layout/fragment_ops.xml
@@ -65,7 +65,7 @@
             android:orientation="horizontal"
             android:layout_weight="2">
             <View
-                android:layout_width="5dp"
+                android:layout_width="2dp"
                 android:layout_height="match_parent"
                 android:background="@color/border"
                 />
@@ -73,7 +73,7 @@
             <RadioGroup
                     android:paddingTop="10dp"
                     android:id="@+id/ops_rcy_left_rg"
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/x18"
                     android:layout_height="match_parent"
                     android:background="@drawable/btn_date_dwmy_normal"
                     android:orientation="vertical"
@@ -152,7 +152,7 @@
                />
 
                 <in.srain.cube.views.ptr.PtrFrameLayout
-                    android:layout_width="0dp"
+                    android:layout_width="@dimen/x102"
                     android:layout_height="match_parent"
                     android:layout_weight="4"
                     android:id="@+id/ops_refreshLayout"
@@ -171,7 +171,11 @@
                     </android.support.v7.widget.RecyclerView>
 
                 </in.srain.cube.views.ptr.PtrFrameLayout>
-
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:background="@color/border"
+                />
 
         </LinearLayout>
     </LinearLayout>
