--- a/app/src/main/res/layout/fragment_questions_discuss_item.xml
+++ b/app/src/main/res/layout/fragment_questions_discuss_item.xml
@@ -12,6 +12,7 @@
         android:gravity="center"
         android:layout_height="100dp">
         <TextView
+            android:id="@+id/discuss_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -29,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/discuss_name"
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,11 +45,13 @@
                 android:text="工程师1组"/>
         </LinearLayout>
         <TextView
+            android:id="@+id/discuss_time"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2018/01/02 12:30:12"/>
         <TextView
+            android:id="@+id/discuss_content"
             android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
