--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -19,6 +19,7 @@
             android:gravity="center_vertical"
             android:layout_height="60dp">
             <ImageView
+                android:id="@+id/ques_img"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
@@ -105,29 +106,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/ques_value_tv1"
                     style="@style/questions_text_style"
                     android:text="A项"/>
                 <TextView
+                    android:id="@+id/ques_value_title1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:textSize="18sp"
                     android:text="420V"/>
                 <TextView
+                    android:id="@+id/ques_value_tv2"
                     android:layout_marginLeft="10dp"
                     style="@style/questions_text_style"
                     android:text="B项"/>
                 <TextView
+                    android:id="@+id/ques_value_title2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:textSize="18sp"
                     android:text="420V"/>
                 <TextView
+                    android:id="@+id/ques_value_tv3"
                     android:layout_marginLeft="10dp"
                     style="@style/questions_text_style"
                     android:text="C项"/>
                 <TextView
+                    android:id="@+id/ques_value_title3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
