--- a/app/src/main/res/layout/activity_ops_item_right.xml
+++ b/app/src/main/res/layout/activity_ops_item_right.xml
@@ -15,7 +15,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/ops_item_title"
@@ -23,6 +22,7 @@
                 android:text="显示异常报警，正常开启亮度不适，显示文字不清晰，时钟不正确，操作不灵活，屏幕屏保不正"
                 />
             <ImageView
+                android:id="@+id/ops_item_img"
                 android:src="@mipmap/ops_cabinet_pending"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
