--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -65,7 +65,8 @@
     <color name="chart_pie_color3">#f6765b</color>
     <color name="chart_pie_color4">#5d77e5</color>
 
-
+    <color name="dialog_title">#d8d8d8</color>
+    <color name="dialog_bg">#f3f3f3</color>
     <!--系统颜色 -->
     <color name="colorPrimary">#00000000</color>
     <color name="colorPrimaryDark">#00000000</color>
