--- a/app/src/main/res/values/energy_styles.xml
+++ b/app/src/main/res/values/energy_styles.xml
@@ -17,6 +17,29 @@
         <item name="android:textSize">19sp</item>
     </style>
 
+
+    <style name="table_dialog_btn_cancel">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:text">取消</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="table_dialog_title_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="table_dialog_btn_confirm">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">33dp</item>
+        <item name="android:background">@drawable/selector_btn_confirm_click</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="toolbar_right">
         <item name="android:layout_width">16dp</item>
         <item name="android:layout_height">16dp</item>
@@ -325,8 +348,8 @@
         <item name="android:textSize">25sp</item>
     </style>
     <style name="questions_text_style">
-        <item name="android:layout_width">50dp</item>
-        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/questions_text_shop</item>
         <item name="android:gravity">center</item>
